- Fixed Sand Worm Controller - Added a cooldown while it resets
- Fixed Puffer Controller - Able to do abilities while players aren't nearby
- Fixed Hoarder Bug Controller - Fixed picking up items being inconsistent
- Fixed Baboon Bird Controller - Fixed picking up items being inconsistent
- Fixed RadMechAI chams - Its now applied to the body not the particles from the stepping
- Changed HP Display to Player HP Display - To cause less confusion
- Changed Teleport All Enemies - Changed the method it used!
- Changed Grab Items Before Game - Redid it so its reverts if it gets disabled and renamed it to Loot Before Game Starts
- Changed Unload - It attempts to remove all enabled hacks and make everything normal
- Changed Unlock Door - Improved the code 
- Changed Enemy Spawn List - Goes by the alphabet now (A - Z)
- Changed Enemy List - Goes by the alphabet now (A - Z)

v1.4.4 
- Added PJ Plushie Spammer - Spams PJ Plushies at a variable speed
- Added Click Teleport - Teleport to where you click
- Added Peer 2 Peer Communication - Adds [LethalMenu {version}] before their names in players tab (1.4.4+) 
- Added New Enemies To Cham Toggles 
- Added Grab Items Before Game - You can pick up items
- Added Toggle All For Displays - Added a toggle to enable and disable all display options
- Added Toggle Terminal Sound - Spam the terminal sound
- Added FPS Counter - Displays your FPS
- Added Toggle Menu Tip - Adds a Toggle Menu: (Menu Key) to control tips
- Added Vehicle Godmode - Cruiser doesn't take damage
- Added Color Customization to info display
- Added Hack Highlight - Hacks are highlighted
- Added Hack Highlight Customization - Set the color of the highlighted hacks 
- Added Transmitt - You can send messages as the signal transmitter
- Added Message Prefixes - [System], [Server], [Broadcast] - You can send messages in chat as these prefixes like [Prefix] {message}
- Added Message as other players 
- Added Suit Manager - View all suits with buy all and wear on buy