@@ -118,7 +118,6 @@ namespace LethalMenu.Menu.Tab
             UI.Hack(Hack.TeleportAllEnemies, "PlayerTab.TeleportAllEnemies", player, LethalMenu.enemies.ToArray());
             UI.Hack(Hack.LureAllEnemies, "PlayerTab.Lure", player);
             UI.Hack(Hack.ExplodeClosestMine, "PlayerTab.ExplodeMine", player);
-            UI.Hack(Hack.ForceBleed, "PlayerTab.ForceBleed", player);
 
             if (player.playerClientId != GameNetworkManager.Instance.localPlayerController.playerClientId)
             {
